--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,59 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f8f9fa;
-    margin: 0;
-    padding: 0;
-  }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
+body, html {
+  background: white !important;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  background-color: #f8f9fa;
+}
+
+.search-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 170px; /* Ajusta la separación del input */
+  margin-bottom: 40px;
+}
+
+.search-bar input {
+  background: white !important;
+  color: black !important;
+  border: 2px solid #ccc; /* Borde gris */
+  padding: 12px 20px;
+  font-size: 16px;
+  border-radius: 25px;
+  transition: all 0.3s ease-in-out;
+  font-family: 'Poppins', sans-serif; /* Aplica Poppins al input */
+}
+
+.search-bar input:focus {
+  background: white;
+  color: black;
+  border-color: #4ae2c6; /* Azul suave */
+  outline: none;
+}
+
+.loading-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.post-title {
+  color: #4ae2c6;
+}
+
+.post-container {
+  border-bottom: 2px solid #ddd;
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+}
+
+.font-semibold.text-lg.text-gray-800 {
+  color: #4ae2c6 !important; /* Color azul corregido */
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
